Update ESP_WiFi Module

--- a/IT-Projekt Waschmaschine/platformio.ini
+++ b/IT-Projekt Waschmaschine/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
 upload_port = /dev/cu.usbmodem212301
-
+lib_deps = featherfly/SoftwareSerial@^1.0
